AddDeviceToMulticastGroup accept devEUI array
