# go/as/external/api/multicastGroup.pb.go
@@ -500,7 +500,7 @@ type AddDeviceToMulticastGroupRequest struct {
 	// Device EUI (HEX encoded string).
 	// Note that the device must be under the same service-profile as the
 	// multicast-group.
-	DevEui               string   `protobuf:"bytes,2,opt,name=dev_eui,json=devEUI,proto3" json:"dev_eui,omitempty"`
+	DevEuis              []string `protobuf:"bytes,2,rep,name=dev_euis,json=devEUIS,proto3" json:"dev_euis,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -538,11 +538,11 @@ func (m *AddDeviceToMulticastGroupRequest) GetMulticastGroupId() string {
 	return ""
 }
 
-func (m *AddDeviceToMulticastGroupRequest) GetDevEui() string {
+func (m *AddDeviceToMulticastGroupRequest) GetDevEuis() []string {
 	if m != nil {
-		return m.DevEui
+		return m.DevEuis
 	}
-	return ""
+	return nil
 }
 
 type RemoveDeviceFromMulticastGroupRequest struct {
@@ -1021,81 +1021,82 @@ func init() {
 }
 
 var fileDescriptor_ba1ee9b21d0ef74e = []byte{
-	// 1185 bytes of a gzipped FileDescriptorProto
+	// 1201 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x57, 0xcd, 0x6e, 0xdb, 0x46,
-	0x17, 0xfd, 0x28, 0xc9, 0xf2, 0xa7, 0xeb, 0x44, 0x31, 0x26, 0xb1, 0xad, 0xd0, 0x4e, 0xad, 0xb0,
-	0x4e, 0xab, 0x08, 0xb1, 0x98, 0xc8, 0x68, 0x7e, 0x8a, 0xb4, 0x80, 0x63, 0x3b, 0x86, 0xdb, 0xb4,
-	0x70, 0x69, 0x67, 0xd3, 0x2e, 0x08, 0x9a, 0x1c, 0x49, 0x83, 0x8a, 0x1c, 0x86, 0x1c, 0x1a, 0x55,
+	0x17, 0xfd, 0x28, 0xc9, 0x52, 0x74, 0x9d, 0x28, 0xc6, 0x24, 0xb6, 0x19, 0xda, 0xf9, 0xa2, 0xb0,
+	0x49, 0xab, 0x08, 0x89, 0x98, 0x28, 0x68, 0x7e, 0x8a, 0xb4, 0x80, 0x63, 0x3b, 0x81, 0xdb, 0xb4,
+	0x70, 0x29, 0x67, 0xd3, 0x2e, 0x08, 0x9a, 0x1c, 0x49, 0x83, 0x88, 0x1c, 0x86, 0x1c, 0x1a, 0x55,
 	0x03, 0x6f, 0xb2, 0xcb, 0xba, 0x9b, 0xa2, 0xe8, 0xa2, 0xeb, 0x3e, 0x42, 0x5f, 0xa2, 0x28, 0xfa,
-	0x0a, 0x7d, 0x90, 0x82, 0x97, 0x23, 0xc9, 0x94, 0x49, 0xd9, 0x6e, 0x90, 0x1d, 0x67, 0xe6, 0xce,
-	0x3d, 0xe7, 0x9e, 0xb9, 0x3f, 0x12, 0xac, 0x59, 0xa1, 0x4e, 0x7f, 0x10, 0x34, 0xf0, 0xac, 0xbe,
-	0x6e, 0xf9, 0x4c, 0x77, 0xa3, 0xbe, 0x60, 0xb6, 0x15, 0x8a, 0xdd, 0x80, 0x47, 0x7e, 0xcb, 0x0f,
-	0xb8, 0xe0, 0xa4, 0x68, 0xf9, 0x4c, 0x5d, 0xe9, 0x72, 0xde, 0xed, 0x53, 0xb4, 0xb2, 0x3c, 0x8f,
-	0x0b, 0x4b, 0x30, 0xee, 0x85, 0x89, 0x89, 0xba, 0x2a, 0x4f, 0x71, 0x75, 0x14, 0x75, 0x74, 0xc1,
-	0x5c, 0x1a, 0x0a, 0xcb, 0x95, 0x3e, 0xd4, 0xe5, 0x49, 0x03, 0xea, 0xfa, 0x62, 0x90, 0x1c, 0x6a,
-	0xbf, 0x15, 0xa0, 0xfa, 0x55, 0x0a, 0x99, 0x54, 0xa1, 0xc0, 0x9c, 0x9a, 0x52, 0x57, 0x1a, 0x15,
-	0xa3, 0xc0, 0x1c, 0x42, 0xa0, 0xe4, 0x59, 0x2e, 0xad, 0x15, 0x70, 0x07, 0xbf, 0xc9, 0x12, 0xcc,
-	0xba, 0xb6, 0x69, 0x39, 0x4e, 0x50, 0x2b, 0xe2, 0x76, 0xd9, 0xb5, 0x37, 0x1d, 0x27, 0x20, 0xd7,
-	0x61, 0xa6, 0x63, 0xda, 0x9e, 0xa8, 0x95, 0xea, 0x4a, 0xe3, 0xaa, 0x51, 0xea, 0x6c, 0x79, 0x82,
-	0x3c, 0x04, 0xe8, 0xc6, 0xae, 0x4d, 0x31, 0xf0, 0x69, 0x6d, 0xa6, 0xae, 0x34, 0xaa, 0xed, 0xa5,
-	0x96, 0xe5, 0xb3, 0x56, 0x1a, 0xfa, 0x70, 0xe0, 0x53, 0xa3, 0xd2, 0x1d, 0x7e, 0xc6, 0x4c, 0x9c,
-	0xa0, 0x56, 0x46, 0x4f, 0x05, 0x27, 0x20, 0x2b, 0x50, 0xe9, 0x04, 0xf4, 0x55, 0x44, 0x3d, 0x7b,
-	0x50, 0x9b, 0xc5, 0xed, 0xf1, 0x06, 0x69, 0xc0, 0xbc, 0xcf, 0xbc, 0xae, 0x19, 0xf6, 0xb9, 0x30,
-	0x7d, 0x1a, 0x30, 0xee, 0xd4, 0xfe, 0x8f, 0x46, 0xd5, 0x78, 0xff, 0xa0, 0xcf, 0xc5, 0x3e, 0xee,
-	0x92, 0x7b, 0x40, 0x42, 0x1a, 0x1c, 0x33, 0x9b, 0x9a, 0x7e, 0xc0, 0x3b, 0xac, 0x4f, 0x4d, 0xe6,
-	0xd4, 0x2a, 0x18, 0xc8, 0xbc, 0x3c, 0xd9, 0x4f, 0x0e, 0xf6, 0xb6, 0xb5, 0x5f, 0x15, 0x58, 0x4c,
-	0xf3, 0x7c, 0xc1, 0x42, 0xb1, 0x27, 0xa8, 0x7b, 0x21, 0xa9, 0xb2, 0xc1, 0x8a, 0xd9, 0x60, 0xe4,
-	0x3e, 0xdc, 0x98, 0xb4, 0x46, 0x8f, 0x25, 0xb4, 0x27, 0x69, 0xfb, 0xaf, 0x2d, 0x97, 0x6a, 0xdf,
-	0xc1, 0xf2, 0x56, 0x40, 0x2d, 0x41, 0xd3, 0x1c, 0x8d, 0x58, 0x96, 0x50, 0x90, 0xa7, 0x70, 0x6d,
-	0x94, 0x59, 0x26, 0x4a, 0x8b, 0x7c, 0xe7, 0xda, 0xd7, 0x33, 0x1e, 0xc0, 0xa8, 0xa6, 0xb3, 0x50,
-	0x6b, 0xc1, 0x4a, 0xb6, 0xf3, 0xd0, 0xe7, 0x5e, 0x48, 0x27, 0x05, 0xd0, 0x9a, 0x50, 0xdb, 0xa5,
-	0x22, 0x9b, 0xc9, 0xa4, 0xed, 0x9f, 0x0a, 0xdc, 0xcc, 0x30, 0x96, 0x9e, 0xdf, 0x89, 0x37, 0x79,
-	0x02, 0x60, 0x23, 0x6f, 0xc7, 0xb4, 0x04, 0x3e, 0xc7, 0x5c, 0x5b, 0x6d, 0x25, 0x85, 0xd0, 0x1a,
-	0x16, 0x42, 0xeb, 0x70, 0x58, 0x29, 0x46, 0x45, 0x5a, 0x6f, 0x8a, 0xf8, 0x6a, 0xe4, 0x3b, 0xc3,
-	0xab, 0xc5, 0xf3, 0xaf, 0x4a, 0xeb, 0x4d, 0x11, 0x3f, 0xc5, 0x4b, 0x5c, 0xbc, 0x8f, 0xa7, 0x58,
-	0x87, 0xe5, 0x6d, 0xda, 0xa7, 0x79, 0xce, 0x27, 0xd5, 0x65, 0x50, 0xdf, 0x74, 0x9c, 0x6d, 0x1a,
-	0xa7, 0xcb, 0x21, 0xcf, 0xbe, 0x73, 0x0f, 0xc8, 0x04, 0x21, 0x73, 0xe4, 0x63, 0x3e, 0x0d, 0xbf,
-	0xb7, 0x1d, 0xd7, 0xbc, 0x43, 0x8f, 0x4d, 0x1a, 0x31, 0x99, 0xdf, 0x65, 0x87, 0x1e, 0xef, 0xbc,
-	0xdc, 0xd3, 0x3c, 0xb8, 0x63, 0x50, 0x97, 0x1f, 0xd3, 0x04, 0xed, 0x79, 0xc0, 0xdd, 0xf7, 0x8a,
-	0xf7, 0x97, 0x02, 0x37, 0xe3, 0x12, 0xcc, 0x06, 0xb9, 0x01, 0x33, 0x7d, 0xe6, 0x32, 0x81, 0x7e,
-	0x8b, 0x46, 0xb2, 0x20, 0x8b, 0x50, 0xe6, 0x9d, 0x4e, 0x48, 0x93, 0x64, 0x28, 0x1a, 0x72, 0x45,
-	0x3e, 0x86, 0x6b, 0x3c, 0xe8, 0x5a, 0x1e, 0xfb, 0x11, 0x9b, 0xea, 0xb0, 0x34, 0x8b, 0x46, 0xf5,
-	0xf4, 0x76, 0x9a, 0x4d, 0xe9, 0x34, 0x9b, 0x9c, 0xfa, 0x9e, 0xc9, 0xa9, 0xef, 0x45, 0x28, 0x87,
-	0xd4, 0x0a, 0xec, 0x1e, 0xb6, 0xb5, 0x8a, 0x21, 0x57, 0x5a, 0x00, 0x6a, 0x56, 0x48, 0xb2, 0x18,
-	0x56, 0x61, 0x4e, 0x70, 0x61, 0xf5, 0x4d, 0x9b, 0x47, 0xde, 0x30, 0x32, 0xc0, 0xad, 0xad, 0x78,
-	0x87, 0x6c, 0x40, 0x39, 0xa0, 0x61, 0xd4, 0x8f, 0xc3, 0x2b, 0x36, 0xe6, 0xda, 0xcb, 0x19, 0x19,
-	0x35, 0xec, 0x5a, 0x86, 0x34, 0xd5, 0xde, 0x28, 0x40, 0x46, 0x26, 0xdf, 0x44, 0x34, 0xa2, 0xd8,
-	0xd4, 0x2e, 0xf7, 0x4a, 0xa3, 0x86, 0x5f, 0x38, 0xd5, 0xf0, 0x17, 0xa0, 0xdc, 0x31, 0x7d, 0x1e,
-	0x24, 0xf5, 0x73, 0xd5, 0x98, 0xe9, 0xec, 0xf3, 0x40, 0xc4, 0xed, 0xd1, 0xb1, 0x84, 0x85, 0x02,
-	0x5e, 0x31, 0xf0, 0x5b, 0x73, 0xa1, 0xbe, 0xe3, 0xbd, 0x8a, 0xc1, 0xcf, 0x52, 0x19, 0x3e, 0xe9,
-	0x1e, 0xdc, 0x18, 0x33, 0x42, 0x5b, 0x93, 0x09, 0xea, 0xca, 0xea, 0x99, 0x98, 0x24, 0xe3, 0xdb,
-	0xe3, 0x30, 0x46, 0x7b, 0xda, 0x63, 0xb8, 0x3d, 0x05, 0x4e, 0xca, 0x3d, 0x8a, 0x49, 0x19, 0xc7,
-	0xa4, 0x1d, 0xc2, 0xda, 0xf3, 0x7e, 0x14, 0xf6, 0xd2, 0xa2, 0x8e, 0x2e, 0x87, 0xff, 0x29, 0xc9,
-	0xb5, 0x03, 0xf8, 0xf0, 0xec, 0xbb, 0xbf, 0xab, 0xd3, 0x10, 0xd6, 0xa6, 0x3b, 0x95, 0x71, 0x7e,
-	0x09, 0x0b, 0x59, 0xba, 0x86, 0x35, 0x05, 0x93, 0x28, 0x57, 0xd8, 0xeb, 0x67, 0x85, 0x0d, 0x9b,
-	0xad, 0x53, 0xc9, 0x34, 0x9a, 0xe6, 0x64, 0x0e, 0x66, 0xb7, 0x5e, 0x6c, 0x1e, 0x1c, 0x98, 0x5b,
-	0xf3, 0xff, 0x1b, 0x2f, 0x9e, 0xcd, 0x2b, 0xed, 0x3f, 0x00, 0x16, 0xd2, 0x17, 0x0e, 0x92, 0x62,
-	0x21, 0x1c, 0xca, 0xc9, 0xd0, 0x21, 0x75, 0x64, 0x30, 0x65, 0xbc, 0xa9, 0xb7, 0xa7, 0x58, 0x24,
-	0x51, 0x6a, 0xf5, 0x37, 0x7f, 0xff, 0xf3, 0x53, 0x41, 0xd5, 0x16, 0xd2, 0x3f, 0xb3, 0xd6, 0x51,
-	0xc6, 0xf0, 0x53, 0xa5, 0x49, 0x7a, 0x50, 0xdc, 0xa5, 0x82, 0xdc, 0x42, 0x5f, 0x79, 0xf3, 0x4b,
-	0xfd, 0x20, 0xef, 0x58, 0xe2, 0x68, 0x88, 0xb3, 0x42, 0xd4, 0x4c, 0x1c, 0xfd, 0x35, 0x73, 0x4e,
-	0xc8, 0x00, 0xca, 0xc9, 0x84, 0x90, 0xa1, 0x4d, 0x19, 0x17, 0xea, 0xe2, 0x99, 0xa1, 0xb3, 0x13,
-	0xff, 0x70, 0xd3, 0x3e, 0x41, 0x1c, 0x5d, 0x6d, 0xe6, 0xe0, 0x4c, 0x24, 0x4a, 0x8b, 0x39, 0x27,
-	0x71, 0x90, 0x1d, 0x28, 0x27, 0xf3, 0x43, 0x42, 0x4f, 0x19, 0x26, 0xb9, 0xd0, 0x32, 0xc4, 0xe6,
-	0xb4, 0x10, 0x3b, 0x50, 0x8a, 0x93, 0x8f, 0x24, 0x72, 0xe5, 0xf6, 0x69, 0x75, 0x35, 0xf7, 0x5c,
-	0xea, 0x79, 0x0b, 0xc1, 0x96, 0x48, 0xf6, 0xbb, 0x91, 0xb7, 0x0a, 0x54, 0x46, 0x13, 0x8e, 0xdc,
-	0x41, 0x6f, 0xe7, 0x4d, 0xbc, 0xdc, 0xc0, 0x3e, 0x43, 0xac, 0x47, 0x5a, 0xfb, 0x62, 0x9a, 0x9a,
-	0xcc, 0x39, 0xd1, 0x1d, 0x44, 0xc2, 0x04, 0xfa, 0x59, 0x81, 0x2b, 0xa7, 0x47, 0x20, 0x69, 0x22,
-	0x9d, 0x0b, 0x4d, 0xc5, 0x5c, 0x4e, 0xdb, 0xc8, 0xe9, 0xf3, 0xe6, 0xd3, 0xcb, 0x73, 0xd2, 0x5f,
-	0xcb, 0x59, 0x75, 0x42, 0x7e, 0x57, 0x60, 0x56, 0x76, 0x3c, 0x29, 0xd2, 0x79, 0xed, 0x56, 0xfd,
-	0xe8, 0x3c, 0x33, 0xf9, 0x40, 0xfb, 0x48, 0xf0, 0x0b, 0x6d, 0xe7, 0x5c, 0x82, 0xe3, 0xde, 0xd2,
-	0xca, 0x62, 0x8d, 0xc7, 0xb1, 0x8e, 0x6f, 0x15, 0x00, 0x6c, 0xb2, 0x08, 0x46, 0xee, 0x22, 0x91,
-	0x8b, 0x74, 0xdd, 0x5c, 0x11, 0x1f, 0x23, 0xc7, 0x76, 0xf3, 0xfe, 0x25, 0x44, 0x4c, 0xc4, 0xfa,
-	0x45, 0x81, 0x4a, 0x9c, 0x9d, 0x09, 0x95, 0x46, 0x4e, 0xb6, 0x9e, 0x65, 0x72, 0xf7, 0x02, 0x96,
-	0x52, 0x40, 0x49, 0x8e, 0x5c, 0x9a, 0xdc, 0xb3, 0x27, 0xdf, 0x3e, 0xea, 0x32, 0xd1, 0x8b, 0x8e,
-	0x5a, 0x36, 0x77, 0xf5, 0xee, 0xa0, 0xf7, 0xe0, 0x61, 0xfb, 0x81, 0x6e, 0xf7, 0x58, 0xe0, 0x87,
-	0xc2, 0xb2, 0xbf, 0x5f, 0x8f, 0x1d, 0x76, 0xb9, 0x7e, 0xbc, 0xa1, 0x4f, 0xfc, 0xcf, 0x3c, 0x2a,
-	0xa3, 0x42, 0x1b, 0xff, 0x06, 0x00, 0x00, 0xff, 0xff, 0x95, 0x74, 0xbb, 0xd5, 0x81, 0x0e, 0x00,
+	0x0a, 0x7d, 0x90, 0x82, 0x97, 0x23, 0xc9, 0x92, 0x49, 0xd9, 0x6e, 0xda, 0x1d, 0x67, 0xe6, 0xce,
+	0x3d, 0xe7, 0x9e, 0xb9, 0x3f, 0x12, 0xdc, 0xb0, 0x23, 0x83, 0x7e, 0x27, 0x68, 0xe8, 0xdb, 0x03,
+	0xc3, 0x0e, 0x98, 0xe1, 0xc5, 0x03, 0xc1, 0x1c, 0x3b, 0x12, 0xcf, 0x43, 0x1e, 0x07, 0xad, 0x20,
+	0xe4, 0x82, 0x93, 0xa2, 0x1d, 0x30, 0x6d, 0xbd, 0xc7, 0x79, 0x6f, 0x40, 0xd1, 0xca, 0xf6, 0x7d,
+	0x2e, 0x6c, 0xc1, 0xb8, 0x1f, 0xa5, 0x26, 0xda, 0x35, 0x79, 0x8a, 0xab, 0xfd, 0xb8, 0x6b, 0x08,
+	0xe6, 0xd1, 0x48, 0xd8, 0x9e, 0xf4, 0xa1, 0xad, 0xcd, 0x1a, 0x50, 0x2f, 0x10, 0xc3, 0xf4, 0x50,
+	0xff, 0xa5, 0x00, 0xb5, 0x2f, 0xa7, 0x90, 0x49, 0x0d, 0x0a, 0xcc, 0x55, 0x95, 0xba, 0xd2, 0xa8,
+	0x9a, 0x05, 0xe6, 0x12, 0x02, 0x25, 0xdf, 0xf6, 0xa8, 0x5a, 0xc0, 0x1d, 0xfc, 0x26, 0xab, 0x50,
+	0xf1, 0x1c, 0xcb, 0x76, 0xdd, 0x50, 0x2d, 0xe2, 0x76, 0xd9, 0x73, 0x36, 0x5c, 0x37, 0x24, 0x97,
+	0x60, 0xa1, 0x6b, 0x39, 0xbe, 0x50, 0x4b, 0x75, 0xa5, 0x71, 0xc1, 0x2c, 0x75, 0x37, 0x7d, 0x41,
+	0x1e, 0x00, 0xf4, 0x12, 0xd7, 0x96, 0x18, 0x06, 0x54, 0x5d, 0xa8, 0x2b, 0x8d, 0x5a, 0x7b, 0xb5,
+	0x65, 0x07, 0xac, 0x35, 0x0d, 0xbd, 0x37, 0x0c, 0xa8, 0x59, 0xed, 0x8d, 0x3e, 0x13, 0x26, 0x6e,
+	0xa8, 0x96, 0xd1, 0x53, 0xc1, 0x0d, 0xc9, 0x3a, 0x54, 0xbb, 0x21, 0x7d, 0x1d, 0x53, 0xdf, 0x19,
+	0xaa, 0x15, 0xdc, 0x9e, 0x6c, 0x90, 0x06, 0x2c, 0x05, 0xcc, 0xef, 0x59, 0xd1, 0x80, 0x0b, 0x2b,
+	0xa0, 0x21, 0xe3, 0xae, 0x7a, 0x0e, 0x8d, 0x6a, 0xc9, 0x7e, 0x67, 0xc0, 0xc5, 0x2e, 0xee, 0x92,
+	0xdb, 0x40, 0x22, 0x1a, 0x1e, 0x30, 0x87, 0x5a, 0x41, 0xc8, 0xbb, 0x6c, 0x40, 0x2d, 0xe6, 0xaa,
+	0x55, 0x0c, 0x64, 0x49, 0x9e, 0xec, 0xa6, 0x07, 0x3b, 0x5b, 0xfa, 0xcf, 0x0a, 0xac, 0x4c, 0xf3,
+	0x7c, 0xc1, 0x22, 0xb1, 0x23, 0xa8, 0x77, 0x2a, 0xa9, 0xb2, 0xc1, 0x8a, 0xd9, 0x60, 0xe4, 0x2e,
+	0x5c, 0x9e, 0xb5, 0x46, 0x8f, 0x25, 0xb4, 0x27, 0xd3, 0xf6, 0x5f, 0xd9, 0x1e, 0xd5, 0xbf, 0x85,
+	0xb5, 0xcd, 0x90, 0xda, 0x82, 0x4e, 0x73, 0x34, 0x13, 0x59, 0x22, 0x41, 0x9e, 0xc0, 0xc5, 0x71,
+	0x66, 0x59, 0x28, 0x2d, 0xf2, 0x5d, 0x6c, 0x5f, 0xca, 0x78, 0x00, 0xb3, 0x36, 0x9d, 0x85, 0x7a,
+	0x0b, 0xd6, 0xb3, 0x9d, 0x47, 0x01, 0xf7, 0x23, 0x3a, 0x2b, 0x80, 0xde, 0x04, 0xf5, 0x39, 0x15,
+	0xd9, 0x4c, 0x66, 0x6d, 0x7f, 0x57, 0xe0, 0x4a, 0x86, 0xb1, 0xf4, 0xfc, 0x5e, 0xbc, 0xc9, 0x63,
+	0x00, 0x07, 0x79, 0xbb, 0x96, 0x2d, 0xf0, 0x39, 0x16, 0xdb, 0x5a, 0x2b, 0x2d, 0x84, 0xd6, 0xa8,
+	0x10, 0x5a, 0x7b, 0xa3, 0x4a, 0x31, 0xab, 0xd2, 0x7a, 0x43, 0x24, 0x57, 0xe3, 0xc0, 0x1d, 0x5d,
+	0x2d, 0x9e, 0x7c, 0x55, 0x5a, 0x6f, 0x88, 0xe4, 0x29, 0x5e, 0xe2, 0xe2, 0xbf, 0x78, 0x8a, 0x3b,
+	0xb0, 0xb6, 0x45, 0x07, 0x34, 0xcf, 0xf9, 0xac, 0xba, 0xaf, 0xa0, 0xbe, 0xe1, 0xba, 0x5b, 0x34,
+	0x49, 0x97, 0x3d, 0x9e, 0x7d, 0xe7, 0x36, 0x90, 0x19, 0x42, 0xd6, 0xd8, 0xc7, 0xd2, 0x34, 0xfc,
+	0xce, 0x16, 0xb9, 0x02, 0xe7, 0x5c, 0x7a, 0x60, 0xd1, 0x98, 0x45, 0x6a, 0xa1, 0x5e, 0x6c, 0x54,
+	0xcd, 0x8a, 0x4b, 0x0f, 0xb6, 0x5f, 0xee, 0x74, 0x74, 0x1f, 0x6e, 0x9a, 0xd4, 0xe3, 0x07, 0x34,
+	0xc5, 0x7b, 0x16, 0x72, 0xef, 0xdf, 0x40, 0x5c, 0x85, 0x8a, 0x44, 0x94, 0x15, 0x55, 0x4e, 0x01,
+	0xf5, 0x3f, 0x14, 0xb8, 0x92, 0x14, 0x61, 0x36, 0xc8, 0x65, 0x58, 0x18, 0x30, 0x8f, 0x09, 0xf4,
+	0x5b, 0x34, 0xd3, 0x05, 0x59, 0x81, 0x32, 0xef, 0x76, 0x23, 0x9a, 0xa6, 0x43, 0xd1, 0x94, 0x2b,
+	0xf2, 0x11, 0x5c, 0xe4, 0x61, 0xcf, 0xf6, 0xd9, 0xf7, 0xd8, 0x56, 0x47, 0xc5, 0x59, 0x34, 0x6b,
+	0x47, 0xb7, 0xa7, 0xd9, 0x94, 0x8e, 0xb2, 0xc9, 0xa9, 0xf0, 0x85, 0x9c, 0x0a, 0x5f, 0x81, 0x72,
+	0x44, 0xed, 0xd0, 0xe9, 0x63, 0x63, 0xab, 0x9a, 0x72, 0xa5, 0x87, 0xa0, 0x65, 0x85, 0x24, 0xcb,
+	0xe1, 0x1a, 0x2c, 0x0a, 0x2e, 0xec, 0x81, 0xe5, 0xf0, 0xd8, 0x1f, 0x45, 0x06, 0xb8, 0xb5, 0x99,
+	0xec, 0x90, 0xfb, 0x50, 0x0e, 0x69, 0x14, 0x0f, 0x04, 0xbe, 0xcd, 0x62, 0x7b, 0x2d, 0x23, 0xa7,
+	0x46, 0x7d, 0xcb, 0x94, 0xa6, 0xfa, 0x5b, 0x05, 0xc8, 0xd8, 0xe4, 0xeb, 0x98, 0xc6, 0x14, 0xdb,
+	0xda, 0xd9, 0x5e, 0x69, 0xdc, 0xf2, 0x0b, 0x47, 0x5a, 0xfe, 0x32, 0x94, 0xbb, 0x56, 0xc0, 0xc3,
+	0xb4, 0x82, 0x2e, 0x98, 0x0b, 0xdd, 0x5d, 0x1e, 0x8a, 0xa4, 0x41, 0xba, 0xb6, 0xb0, 0x51, 0xc0,
+	0xf3, 0x26, 0x7e, 0xeb, 0x1e, 0xd4, 0xb7, 0xfd, 0xd7, 0x09, 0xf8, 0x71, 0x2a, 0xa3, 0x27, 0xdd,
+	0x81, 0xcb, 0x13, 0x46, 0x68, 0x6b, 0x31, 0x41, 0x3d, 0x59, 0x3f, 0x33, 0xb3, 0x64, 0x72, 0x7b,
+	0x12, 0xc6, 0x78, 0x4f, 0x7f, 0x04, 0xd7, 0xe7, 0xc0, 0x49, 0xb9, 0xc7, 0x31, 0x29, 0x93, 0x98,
+	0xf4, 0x3d, 0xb8, 0xf1, 0x6c, 0x10, 0x47, 0xfd, 0x69, 0x51, 0xc7, 0x97, 0xa3, 0x7f, 0x94, 0xe4,
+	0x7a, 0x07, 0x3e, 0x38, 0xfe, 0xee, 0xef, 0xeb, 0x34, 0x82, 0x1b, 0xf3, 0x9d, 0xca, 0x38, 0xbf,
+	0x80, 0xe5, 0x2c, 0x5d, 0x23, 0x55, 0xc1, 0x24, 0xca, 0x15, 0xf6, 0xd2, 0x71, 0x61, 0xa3, 0x66,
+	0xeb, 0x48, 0x32, 0x8d, 0xe7, 0x39, 0x59, 0x84, 0xca, 0xe6, 0x8b, 0x8d, 0x4e, 0xc7, 0xda, 0x5c,
+	0xfa, 0xdf, 0x64, 0xf1, 0x74, 0x49, 0x69, 0xff, 0x06, 0xb0, 0x3c, 0x7d, 0xa1, 0x93, 0x16, 0x0b,
+	0xe1, 0x50, 0x4e, 0xc7, 0x0e, 0xa9, 0x23, 0x83, 0x39, 0x03, 0x4e, 0xbb, 0x3e, 0xc7, 0x22, 0x8d,
+	0x52, 0xaf, 0xbf, 0xfd, 0xf3, 0xaf, 0x1f, 0x0a, 0x9a, 0xbe, 0x3c, 0xfd, 0x43, 0xeb, 0x0e, 0xca,
+	0x18, 0x7d, 0xa2, 0x34, 0x49, 0x1f, 0x8a, 0xcf, 0xa9, 0x20, 0x57, 0xd1, 0x57, 0xde, 0x04, 0xd3,
+	0xfe, 0x9f, 0x77, 0x2c, 0x71, 0x74, 0xc4, 0x59, 0x27, 0x5a, 0x26, 0x8e, 0xf1, 0x86, 0xb9, 0x87,
+	0x64, 0x08, 0xe5, 0x74, 0x46, 0xc8, 0xd0, 0xe6, 0x0c, 0x0c, 0x6d, 0xe5, 0xd8, 0xd8, 0xd9, 0x4e,
+	0x7e, 0xba, 0xe9, 0x1f, 0x23, 0x8e, 0xa1, 0x35, 0x73, 0x70, 0x66, 0x12, 0xa5, 0xc5, 0xdc, 0xc3,
+	0x24, 0xc8, 0x2e, 0x94, 0xd3, 0x09, 0x22, 0xa1, 0xe7, 0x8c, 0x93, 0x5c, 0x68, 0x19, 0x62, 0x73,
+	0x5e, 0x88, 0x5d, 0x28, 0x25, 0xc9, 0x47, 0x52, 0xb9, 0x72, 0xfb, 0xb4, 0x76, 0x2d, 0xf7, 0x5c,
+	0xea, 0x79, 0x15, 0xc1, 0x56, 0x49, 0xf6, 0xbb, 0x91, 0x77, 0x0a, 0x54, 0xc7, 0x33, 0x8e, 0xdc,
+	0x44, 0x6f, 0x27, 0xcd, 0xbc, 0xdc, 0xc0, 0x3e, 0x45, 0xac, 0x87, 0x7a, 0xfb, 0x74, 0x9a, 0x5a,
+	0xcc, 0x3d, 0x34, 0x5c, 0x44, 0xc2, 0x04, 0xfa, 0x51, 0x81, 0xf3, 0x47, 0x47, 0x20, 0x69, 0x22,
+	0x9d, 0x53, 0x4d, 0xc5, 0x5c, 0x4e, 0x5b, 0xc8, 0xe9, 0xb3, 0xe6, 0x93, 0xb3, 0x73, 0x32, 0xde,
+	0xc8, 0x59, 0x75, 0x48, 0x7e, 0x55, 0xa0, 0x22, 0x3b, 0x9e, 0x14, 0xe9, 0xa4, 0x76, 0xab, 0x7d,
+	0x78, 0x92, 0x99, 0x7c, 0xa0, 0x5d, 0x24, 0xf8, 0xb9, 0xbe, 0x7d, 0x22, 0xc1, 0x49, 0x6f, 0x69,
+	0x65, 0xb1, 0xc6, 0xe3, 0x44, 0xc7, 0x77, 0x0a, 0x00, 0x36, 0x59, 0x04, 0x23, 0xb7, 0x90, 0xc8,
+	0x69, 0xba, 0x6e, 0xae, 0x88, 0x8f, 0x90, 0x63, 0xbb, 0x79, 0xf7, 0x0c, 0x22, 0xa6, 0x62, 0xfd,
+	0xa4, 0x40, 0x35, 0xc9, 0xce, 0x94, 0x4a, 0x23, 0x27, 0x5b, 0x8f, 0x33, 0xb9, 0x75, 0x0a, 0x4b,
+	0x29, 0xa0, 0x24, 0x47, 0xce, 0x4c, 0xee, 0xe9, 0xe3, 0x6f, 0x1e, 0xf6, 0x98, 0xe8, 0xc7, 0xfb,
+	0x2d, 0x87, 0x7b, 0x46, 0x6f, 0xd8, 0xbf, 0xf7, 0xa0, 0x7d, 0xcf, 0x70, 0xfa, 0x2c, 0x0c, 0x22,
+	0x61, 0x3b, 0xaf, 0xee, 0x24, 0x0e, 0x7b, 0xdc, 0x38, 0xb8, 0x6f, 0xcc, 0xfc, 0xd3, 0xdc, 0x2f,
+	0xa3, 0x42, 0xf7, 0xff, 0x0e, 0x00, 0x00, 0xff, 0xff, 0x8d, 0x19, 0x86, 0xe9, 0x83, 0x0e, 0x00,
 	0x00,
 }
 
